# AFLplusplus

./: .clang-format  .gitignore  GNUmakefile  GNUmakefile.bluetooth  afl-gen  res.txt
include/: afl-fuzz.h  bluetooth.h  bluetooth_api.h  bt.h  config.h  forkserver.h  mutator.h  sharedmem.h
instrumentation/: SanitizerCoverageLTO.so.cc  SanitizerCoveragePCGUARD.so.cc  afl-compiler-rt.o.c  afl-llvm-pass.so.cc
scripts/: 1846.html  1846_ind.html  1846s.html  Core_v5.3.txt  Core_v5.3_clean.txt  SpecParser.py  a.dot  parser.py  res.txt
src/: afl-cc.c  afl-forkserver.c  afl-fuzz-bitmap.c  afl-fuzz-bt-mutators.c  afl-fuzz-init.c  afl-fuzz-one.c  afl-fuzz-queue.c  afl-fuzz-run.c  afl-fuzz.c  afl-sharedmem.c
src/bluetooth/: BTFuzz.cpp  BTFuzz.h  BTFuzzState.cpp  BTFuzzState.h  Dump.cpp  Fuzz.cpp  Fuzz.h  HCIGraph.cpp  HCIGraph.h  Hci.cpp  Hci.h  Item.h  Makefile  Operation.cpp  Operation.h  Parse.cpp  Parse.h  Serialize.h  StackAnalyze.cpp  Util.cpp  Util.h  bt-fuzz.cpp  bt-fuzz.h  bt-harness.cpp  bt-harness.h  bt-hci-analyze.cpp  dump  harness.cpp  harness.h  hci.c  hci.cpp  hci.h  hci_analyze.cpp  hci_analyze.h  stack_analyze.cpp  testcase.cpp  testcase.h  util.cpp  util.h
src/harness/: btstack_harness.c  btstack_ops.json  execute.c  harness.c  harness.cpp  harness.h  tmp.c
src/onfsm/: NonDetObservationTable.h
testcases/bluetooth/btstack/: .gdbinit  CMakeLists.txt  bt  btstack_config.h  btstack_ops.json  btstack_ops_new.json  build_afl.sh  build_wllvm.sh  cmake_install.cmake  crash  fuzz_target.c  harness.c  hci_transport_fuzz.c  id:000000,sig:11,src:000532,time:131117,execs:1341998,op:havoc,rep:16  main.c  port.c  run_loop_fuzz.c  test
testcases/bluetooth/btstack/ACL/: acl  acl110  acl182  acl183  acl184  acl185  acl186  acl187  acl188  acl189  acl190  acl191  acl192  acl193  acl194  acl195  acl196  acl197  acl198  acl199  acl200  acl201  acl202  acl248  acl291  acl3  acl339  acl379  acl380  acl381  acl406  acl462  acl55  acl560  acl561  acl562  acl563  acl86  acl87  acl88  (+1 more)
testcases/bluetooth/btstack/afl_build/: CMakeCache.txt  Makefile  bt  cmake_install.cmake
testcases/bluetooth/btstack/crashes/: id:000000,sig:06,src:000346,time:112531,execs:957846,op:havoc,rep:16
testcases/bluetooth/btstack/wllvm_build/: CMakeCache.txt  Makefile  cmake_install.cmake
testcases/bluetooth/btstack_new/: .gdbinit  CMakeLists.txt  Makefile  hci_transport_fuzz.c  hci_transport_fuzz.h  main.c  mesh_node_demo.h
testcases/bluetooth/btstack_new/fuzzer/: CMakeLists.txt  Makefile  btfuzz  btfuzz.c  btfuzz.h  btfuzz_bluetooth.h  btfuzz_main.c  btfuzz_rand.c  btfuzz_rand.h  btfuzz_type.h  btfuzz_util.h  transform.py
testcases/bluetooth/btstack_new/fuzzer/include/: btfuzz.h  btfuzz_att.h  btfuzz_hci.h  btfuzz_l2cap.h  btfuzz_sm.h  btfuzz_state.h  btfuzz_util.h
testcases/bluetooth/btstack_new/fuzzer/include/common/: bluetooth.h  random.h  transport.h  util.h
testcases/bluetooth/btstack_new/fuzzer/include/protocols/: btfuzz_att.h  btfuzz_hci.h  btfuzz_l2cap.h  btfuzz_sm.h
testcases/bluetooth/btstack_new/fuzzer/src/: btfuzz.c  btfuzz_main.c  btfuzz_rand.c  btfuzz_state.c  btfuzz_util.c
testcases/bluetooth/btstack_new/fuzzer/src/common/: transport.c  util.c
testcases/bluetooth/btstack_new/fuzzer/src/protocols/: btfuzz_att.c  btfuzz_hci.c
testcases/bluetooth/nimble/: .gdbinit  Makefile  build_afl.sh  build_wllvm.sh  execute.c  harness.c  hci_transport_fuzz.c  kernel_config.sh  main.c  nimble-linux  nimble_ops.json  port.c
testcases/bluetooth/nimble/afl_build/: Makefile  nimble-linux
testcases/bluetooth/nimble/wllvm_build/: .hci_transport_fuzz.o.bc  .main.o.bc  Makefile  nimble-linux  nimble-linux.bc
testcases/bluetooth/nimble/wllvm_build/ext/tinycrypt/src/: .aes_decrypt.o.bc  .aes_encrypt.o.bc  .cbc_mode.o.bc  .ccm_mode.o.bc  .cmac_mode.o.bc  .ctr_mode.o.bc  .ctr_prng.o.bc  .ecc.o.bc  .ecc_dh.o.bc  .ecc_dsa.o.bc  .ecc_platform_specific.o.bc  .hmac.o.bc  .hmac_prng.o.bc  .sha256.o.bc  .utils.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/services/ans/src/: .ble_svc_ans.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/services/bas/src/: .ble_svc_bas.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/services/dis/src/: .ble_svc_dis.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/services/gap/src/: .ble_svc_gap.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/services/gatt/src/: .ble_svc_gatt.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/services/ias/src/: .ble_svc_ias.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/services/lls/src/: .ble_svc_lls.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/services/tps/src/: .ble_svc_tps.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/host/src/: .ble_att.o.bc  .ble_att_clt.o.bc  .ble_att_cmd.o.bc  .ble_att_svr.o.bc  .ble_dtm.o.bc  .ble_eddystone.o.bc  .ble_gap.o.bc  .ble_gattc.o.bc  .ble_gatts.o.bc  .ble_gatts_lcl.o.bc  .ble_hs.o.bc  .ble_hs_adv.o.bc  .ble_hs_atomic.o.bc  .ble_hs_cfg.o.bc  .ble_hs_conn.o.bc  .ble_hs_flow.o.bc  .ble_hs_hci.o.bc  .ble_hs_hci_cmd.o.bc  .ble_hs_hci_evt.o.bc  .ble_hs_hci_util.o.bc  .ble_hs_id.o.bc  .ble_hs_log.o.bc  .ble_hs_mbuf.o.bc  .ble_hs_misc.o.bc  .ble_hs_mqueue.o.bc  .ble_hs_periodic_sync.o.bc  .ble_hs_pvcy.o.bc  .ble_hs_shutdown.o.bc  .ble_hs_startup.o.bc  .ble_hs_stop.o.bc  .ble_ibeacon.o.bc  .ble_l2cap.o.bc  .ble_l2cap_coc.o.bc  .ble_l2cap_sig.o.bc  .ble_l2cap_sig_cmd.o.bc  .ble_sm.o.bc  .ble_sm_alg.o.bc  .ble_sm_cmd.o.bc  .ble_sm_lgcy.o.bc  .ble_sm_sc.o.bc  (+3 more)
testcases/bluetooth/nimble/wllvm_build/nimble/host/util/src/: .addr.o.bc
testcases/bluetooth/nimble/wllvm_build/nimble/transport/src/: .monitor.o.bc  .transport.o.bc
testcases/bluetooth/nimble/wllvm_build/porting/nimble/src/: .endian.o.bc  .mem.o.bc  .nimble_port.o.bc  .os_mbuf.o.bc  .os_mempool.o.bc  .os_msys_init.o.bc
testcases/bluetooth/nimble/wllvm_build/porting/npl/linux/src/: .os_atomic.o.bc  .os_callout.o.bc  .os_eventq.o.bc  .os_mutex.o.bc  .os_sem.o.bc  .os_task.o.bc  .os_time.o.bc
(+1 files in other folders)
